# django_first_website

./: README1.md  pyproject.toml  requirements.txt
main/: views.py
main/static/: styles2.css
main/templates/: area.html  beta_main.html  circle.html  quadrilateral.html  straight.html  triangle.html  trigonometry.html
my_site/: settings.py  urls.py
