[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["name-is5\\ <dakovartem0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
dj-database-url = "^1.3.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
whitenoise = "^6.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
